--- a/Styles/travel.css
+++ b/Styles/travel.css
@@ -178,7 +178,8 @@ body {
     border: none;
 }
 .button{
-    padding: 0px 20px;
+    padding: 0px 60px;
+    border-radius: 10px;
 }
 /* popular-section-styles */
 
@@ -761,7 +762,10 @@ font-size: 20px;
         margin-top: 20px;
         width: 100%;
     }
-
+.button{
+    padding: 8px 30px;
+    border-radius: 10px;
+}
 
 
 
