--- a/Styles/travel.css
+++ b/Styles/travel.css
@@ -238,6 +238,23 @@ body {
     /* display: flex; */
     padding-left: 40px;
     padding-right: 20px;
+    position: relative;
+
+}
+
+.country-1{
+    font-size: 24px;
+    color: #fcf9f9;
+    position: absolute;
+    left: 22%;
+    bottom: 50%;
+}
+.country-2{
+    font-size: 24px;
+    color: #fcf9f9;
+    position: absolute;
+    left: 70%;
+    bottom: 50%;
 }
 
 .destination-img-container-2 {
@@ -247,7 +264,34 @@ body {
     gap: 20px;
     padding-left: 40px;
     padding-right: 20px;
+    position: relative;
 }
+
+.country-3{
+    font-size: 24px;
+    color: #fcf9f9;
+    position: absolute;
+    left: 14%;
+    bottom: 45%;
+}
+.country-4{
+    font-size: 24px;
+    color: #fcf9f9;
+    position: absolute;
+    left: 45%;
+    bottom: 45%;
+}
+.country-5{
+    font-size: 24px;
+    color: #fcf9f9;
+    position: absolute;
+    left: 81%;
+    bottom: 45%;
+}
+
+
+
+
 
 .destination-img-container-3 {
     padding-top: 20px;
@@ -255,8 +299,22 @@ body {
     grid-template-columns: repeat(2, 1fr);
     padding-left: 40px;
     padding-right: 44px;
+    position: relative;
 }
-
+.country-6{
+    font-size: 24px;
+    color: #fcf9f9;
+    position: absolute;
+    left: 18%;
+    bottom: 45%;
+}
+.country-7{
+    font-size: 24px;
+    color: #fcf9f9;
+    position: absolute;
+    left: 65%;
+    bottom: 45%;
+}
 
 
 /* hotel-service-section */
