--- a/Styles/travel.css
+++ b/Styles/travel.css
@@ -165,7 +165,7 @@ body {
 .form {
     display: flex;
     background-color: rgba(255, 255, 255, 0.30);
-    padding: 10px;
+    padding: 10px 20px;
     border-radius: 15px;
 }
 
